tests/integrations/basic-fail/tests/actual_tests_bless_yolo/rustfix-multiple-fail.rs
pub fn f(_: i32) -> &i32 {
    //~^ ERROR: missing lifetime
    unimplemented!()
}

fn main() {
    f(1);
}
